--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ a:focus {
 .page-header .container {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-image: url("img/original.png");
+  background-image: url("original.png");
   background-repeat: no-repeat;
   background-position: bottom right;
   background-size: 320px 202px;
